tests/baselines/reference/pathMappingBasedModuleResolution6_classic.errors.txt
c:/root/src/tsconfig.json(2,5): error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.


==== c:/root/src/tsconfig.json (1 errors) ====
    {
        "compilerOptions": {
        ~~~~~~~~~~~~~~~~~
!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
            "rootDirs": [
                ".",
                "../generated/src"
            ]
        }
    }
    
==== c:/root/src/file1.ts (0 errors) ====
    import {x} from "./project/file3";
    declare function use(x: string);
    use(x.toExponential());
    
==== c:/root/src/file2.d.ts (0 errors) ====
    export let x: number;
    
==== c:/root/generated/src/project/file3.ts (0 errors) ====
    export {x} from "../file2";